VA-917 Fix title text overflow

--- a/src/styles/_statusbar.scss
+++ b/src/styles/_statusbar.scss
@@ -150,12 +150,14 @@
       align-items: center;
       z-index: 1;
       line-height: 1;
+      overflow: hidden;
 
       .h5p-interactive-book-status-chapter {
         flex-grow: 1;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+        max-width: 100%;
 
         .title {
           color: var(--h5p-theme-text-secondary);
@@ -284,17 +286,17 @@
     color: var(--h5p-theme-contrast-cta);
     border: none;
     cursor: pointer;
-    
+
     &:focus{
       outline: 2px ridge var(--h5p-theme-main-cta-base);
       border-radius: 4px;
       outline-offset: 2px;
     }
-    
+
     &:hover{
       background-color: color-mix(in srgb, var(--h5p-theme-contrast-cta-light), transparent 60%);
     }
-    
+
     &:active{
       background-color: color-mix(in srgb, var(--h5p-theme-contrast-cta-light), transparent 80%);
     }
